force-app/main/default/objects/Invoice__c/fields/AccountCustom__c.field-meta.xml
<CustomField>
    <fullName>AccountCustom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountCustom</label>
    <referenceTo>AccountCustom__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>