force-app/main/default/objects/Invoice__c/fields/ProductCustom__c.field-meta.xml
<CustomField>
    <fullName>ProductCustom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCustom</label>
    <referenceTo>ProductCustom__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>